load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_apple//apple:ios.bzl", "ios_application")
load("@rules_apple//apple:macos.bzl", "macos_application")
load("@rules_apple//apple:versioning.bzl", "apple_bundle_version")
load("@rules_dart//dart:defs.bzl", "dart_test")
load("@rules_flutter//flutter:android.bzl", "flutter_android_app")
load("@rules_flutter//flutter:defs.bzl", "flutter_application")
load(
    "@rules_flutter//flutter:ios.bzl",
    "IOS_DEFAULT_LAUNCH_STORYBOARD",
    "IOS_MINIMUM_OS_VERSION",
    "flutter_ios_engine",
    "flutter_ios_framework_gen",
    "flutter_ios_info_plist_gen",
    "flutter_ios_native_frameworks_gen",
    "flutter_ios_privacy_manifests_gen",
    "flutter_ios_registrant_gen",
    "flutter_ios_runner_lib_gen",
)
load("@rules_flutter//flutter:linux.bzl", "flutter_linux_app")
load(
    "@rules_flutter//flutter:macos.bzl",
    "MACOS_MINIMUM_OS_VERSION",
    "flutter_macos_engine",
    "flutter_macos_framework_gen",
    "flutter_macos_info_plist_gen",
    "flutter_macos_menu_xib_gen",
    "flutter_macos_native_libs_gen",
    "flutter_macos_privacy_manifests_gen",
    "flutter_macos_registrant_gen",
    "flutter_macos_runner_lib_gen",
)
load("@rules_flutter//flutter:web.bzl", "flutter_web_bundle")
load("@rules_flutter//flutter:windows.bzl", "flutter_windows_app")

exports_files(["pubspec.lock"])

flutter_application(
    name = "plugin_app",
    package_name = "plugin_example",
    main = "lib/main.dart",
    # Visible to the optional, git-ignored //device package for on-device
    # (signed) iOS builds. See device.example/.
    visibility = ["//device:__pkg__"],
    deps = [
        "//greeting_plugin",
        "@deps//:audio_session",
        "@deps//:flutter",
        "@deps//:package_info_plus",
        "@deps//:path_provider",
        "@deps//:url_launcher",
        "@rules_flutter//flutter:material_icons",
    ],
)

# =============================================================================
# macOS build
# =============================================================================

flutter_macos_framework_gen(
    name = "plugin_macos_framework",
    application = ":plugin_app",
)

flutter_macos_registrant_gen(
    name = "plugin_macos_registrant",
    application = ":plugin_app",
)

flutter_macos_native_libs_gen(
    name = "plugin_macos_native_libs",
    application = ":plugin_app",
)

flutter_macos_privacy_manifests_gen(
    name = "plugin_macos_privacy_manifests",
    application = ":plugin_app",
)

flutter_macos_engine(
    name = "flutter_engine",
)

flutter_macos_info_plist_gen(
    name = "plugin_macos_info_plist",
    app_name = "Plugin Example",
)

flutter_macos_menu_xib_gen(
    name = "runner_menu_xib",
    app_name = "Plugin Example",
)

flutter_macos_runner_lib_gen(
    name = "runner_lib",
    application = ":plugin_app",
    engine = ":flutter_engine",
    registrant = ":plugin_macos_registrant",
)

apple_bundle_version(
    name = "plugin_macos_version",
    build_version = "1.0",
    short_version_string = "1.0",
    tags = ["manual"],
)

macos_application(
    name = "plugin_macos",
    additional_contents = {
        ":plugin_macos_framework": "Frameworks",
        ":plugin_macos_native_libs": "Frameworks",
        ":plugin_macos_privacy_manifests": "Resources",
    },
    bundle_id = "com.example.plugin",
    infoplists = [":plugin_macos_info_plist"],
    minimum_os_version = MACOS_MINIMUM_OS_VERSION,
    resources = [":runner_menu_xib"],
    tags = ["manual"],
    version = ":plugin_macos_version",
    deps = [":runner_lib"],
)

# =============================================================================
# iOS build
# =============================================================================

flutter_ios_framework_gen(
    name = "plugin_ios_framework",
    application = ":plugin_app",
)

flutter_ios_registrant_gen(
    name = "plugin_ios_registrant",
    application = ":plugin_app",
)

flutter_ios_engine(
    name = "plugin_ios_engine",
)

flutter_ios_native_frameworks_gen(
    name = "plugin_ios_native_frameworks",
    application = ":plugin_app",
)

flutter_ios_privacy_manifests_gen(
    name = "plugin_ios_privacy_manifests",
    application = ":plugin_app",
)

flutter_ios_info_plist_gen(
    name = "ios_runner_info_plist",
    app_name = "Plugin Example",
)

flutter_ios_runner_lib_gen(
    name = "ios_runner_lib",
    application = ":plugin_app",
    engine = ":plugin_ios_engine",
    registrant = ":plugin_ios_registrant",
)

apple_bundle_version(
    name = "plugin_ios_version",
    build_version = "1.0",
    short_version_string = "1.0",
    tags = ["manual"],
)

ios_application(
    name = "plugin_ios",
    bundle_id = "com.example.plugin",
    families = ["iphone"],
    infoplists = [":ios_runner_info_plist"],
    launch_storyboard = IOS_DEFAULT_LAUNCH_STORYBOARD,
    minimum_os_version = IOS_MINIMUM_OS_VERSION,
    resources = [":plugin_ios_privacy_manifests"],
    tags = ["manual"],
    version = ":plugin_ios_version",
    deps = [
        ":ios_runner_lib",
        ":plugin_ios_framework",
    ],
)

# =============================================================================
# Other platforms
# =============================================================================

flutter_web_bundle(
    name = "plugin_web",
    package_name = "plugin_example",
    main = "lib/main.dart",
    title = "Plugin Example",
    deps = [
        "//greeting_plugin",
        "@deps//:audio_session",
        "@deps//:flutter",
        "@deps//:package_info_plus",
        "@deps//:path_provider",
        "@deps//:url_launcher",
        "@rules_flutter//flutter:material_icons",
    ],
)

flutter_linux_app(
    name = "plugin_linux",
    application = ":plugin_app",
    target_compatible_with = ["@platforms//os:linux"],
)

flutter_windows_app(
    name = "plugin_windows",
    application = ":plugin_app",
    target_compatible_with = ["@platforms//os:windows"],
)

# =============================================================================
# Android build
#
# `flutter_android_app` auto-wires the registrant and the hub aggregator.
# Every plugin in pubspec.lock with a `flutter.plugin.platforms.android.package`
# block contributes its Kotlin/Java sources via @deps//android:all_android_plugin_libs.
# `flutter create` output under android/app/src/main/ supplies the manifest,
# resources, and Kotlin runner.
# =============================================================================

flutter_android_app(
    name = "plugin_android",
    package_name = "com.example.plugin_example",
    application = ":plugin_app",
    proguard_specs = ["app_proguard.pro"],
)

# =============================================================================
# Tests
# =============================================================================

build_test(
    name = "plugin_build_test",
    targets = [
        ":plugin_app",
        "//greeting_plugin",
    ],
)

build_test(
    name = "macos_bundle_build_test",
    target_compatible_with = ["@platforms//os:macos"],
    targets = [":plugin_macos"],
)

build_test(
    name = "ios_bundle_build_test",
    target_compatible_with = ["@platforms//os:macos"],
    targets = [":plugin_ios"],
)

build_test(
    name = "linux_bundle_build_test",
    target_compatible_with = ["@platforms//os:linux"],
    targets = [":plugin_linux"],
)

build_test(
    name = "windows_bundle_build_test",
    target_compatible_with = ["@platforms//os:windows"],
    targets = [":plugin_windows"],
)

build_test(
    name = "android_bundle_build_test",
    tags = ["android"],
    targets = [":plugin_android"],
)

build_test(
    name = "web_build_test",
    targets = [":plugin_web"],
)

# Runtime verifier for the macOS bundle. Launches the .app, captures stdout,
# and asserts the four plugin-result strings appear. Tagged "manual" +
# "exclusive" because it requires a GUI session and exclusive control of the
# Dock; run explicitly per docs/TESTING.md § Plugin verification matrix.
dart_test(
    name = "verify_macos_app_test",
    data = [":plugin_macos"],
    main = "test/verify_macos_app_test.dart",
    tags = [
        "exclusive",
        "manual",
    ],
    target_compatible_with = ["@platforms//os:macos"],
)
