load("@pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "screenshot",
    srcs = ["screenshot.py"],
    main = "screenshot.py",
    visibility = ["//tools/dev_tool:__pkg__"],
    deps = [requirement("pymobiledevice3")],
)

py_binary(
    name = "tunneld",
    srcs = ["tunneld.py"],
    main = "tunneld.py",
    visibility = ["//tools/dev_tool:__pkg__"],
    deps = [requirement("pymobiledevice3")],
)
